[package]
name = "zerox-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.50"
tokio = { version = "1.35.0", features = ["full"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
reqwest = { version = "0.11.22", features = ["rustls-tls", "json"] }

ethers = { version = "2.0.11", optional = true }

[features]
transaction_request = ["ethers"]
