[package]
name = "zerox-client"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/lumen-limitless/zerox-client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.50"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
reqwest = { version = "0.11.22", features = ["rustls-tls", "json"] }

ethers = { version = "2.0.11", optional = false }
tracing = "0.1.40"

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.35.0", features = ["full"] }


# [features]
# transaction_request = ["ethers"]
